--- a/assets/style.css
+++ b/assets/style.css
@@ -87,7 +87,7 @@ body {
 }
 #about-me p {
 	width: 80%;
-	font-size: 15px;
+	font-size: 14px;
 }
 
 #gallery {
@@ -102,8 +102,8 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
-	border-radius:0 ;
+	background-color: #d8c417;
+	border-radius:0;
 }
 .nav-pills .nav-link {
 	color: #000
